--- a/ecommerce/src/Header.css
+++ b/ecommerce/src/Header.css
@@ -1,11 +1,10 @@
 .header {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   display: flex;
-  gap: 10rem;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   width: 100%;
-  padding: 1rem;
+  padding-top: 1rem;
 }
 
 .nav {
@@ -30,4 +29,7 @@
   position: absolute;
   top: 32px;
   right: -10px;
+}
+
+@media (min-width: 768px) {
 }
