--- a/ecommerce/src/Info.css
+++ b/ecommerce/src/Info.css
@@ -10,11 +10,13 @@ body {
   /* align-items: center; */
   justify-content: center;
   max-width: 400px;
-  gap: 1rem;
+  gap: 2rem;
   font-family: "Archivo", sans-serif;
 }
 .subheading {
   font-weight: 700;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   font-size: 22px;
 }
 button {
@@ -34,10 +36,12 @@ p {
   font-weight: 400;
   font-size: 18px;
   color: #656565;
+  line-height: 27px;
+  letter-spacing: 0em;
 }
 .flex {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .buy {
